# Presto

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml  python-package.yml
generate/: lsd.py
lsd/: __init__.py  base.py  config.py  lsd.py  utils.py
lsd/design/: ae.yaml  dr.yaml  tf.yaml
lsd/design/data/: ae.yaml  dr.yaml  tf.yaml
lsd/design/implementation/: ae.yaml
lsd/design/model/: ae.yaml
lsd/design/templates/ae/hyperparameter_multiverse/: CIFAR10.yaml  FashionMNIST.yaml  MNIST.yaml  XYC.yaml  celebA.yaml  dsprites.yaml  teapots.yaml
lsd/design/templates/ae/implementation_multiverse/: CIFAR10_batch_size.yaml  CIFAR10_hidden_dims.yaml  CIFAR10_learning_rate.yaml  CIFAR10_sample_size.yaml  CIFAR10_train_test.yaml  FashionMNIST_batch_size.yaml  FashionMNIST_hidden_dims.yaml  FashionMNIST_learning_rate.yaml  FashionMNIST_sample_size.yaml  FashionMNIST_train_test.yaml  MNIST_batch_size.yaml  MNIST_hidden_dims.yaml  MNIST_learning_rate.yaml  MNIST_sample_size.yaml  MNIST_train_test.yaml  celebA_batch_size.yaml  celebA_hidden_dims.yaml  celebA_learning_rate.yaml  celebA_sample_size.yaml  celebA_train_test.yaml  dsprites_batch_size.yaml  dsprites_hidden_dims.yaml  dsprites_learning_rate.yaml  dsprites_sample_size.yaml  dsprites_train_test.yaml
lsd/design/templates/ae/random_initializations/: MNIST.yaml
lsd/generate/autoencoders/: __init__.py  ae.py  configs.py  gym.py  logger.py
lsd/generate/autoencoders/datasets/: base_dataset.py  celebA.py  mnist.py
lsd/generate/autoencoders/models/: __init__.py  beta.py  info.py  vae.py  wae.py
lsd/generate/autoencoders/optimizers/: adam.py  base.py  sgd.py
lsd/generate/dim_reductions/: __init__.py  configs.py  dr.py
lsd/generate/dim_reductions/datasets/: local.py  manifolds.py  scikit.py
lsd/generate/dim_reductions/models/: isomap.py  lle.py  phate.py  projector.py  tsne.py  umap.py
lsd/generate/transformers/: __init__.py  configs.py  tf.py
lsd/generate/transformers/models/: __init__.py  huggingface.py  pretrained.py  sbert.py
presto/: __init__.py  atom.py  presto.py
presto/compare/: __init__.py  atom.py  presto.py
presto/comparisons/: atom.py  presto.py
presto/generate/: base.py  config.py  log.py
presto/generators/: base.py  config.py  main.py
presto/generators/autoencoders/: __init__.py  ae.py
presto/generators/autoencoders/datasets/: base_dataset.py
presto/generators/dim_reduction/: dr.py
presto/generators/transformers/: tf.py
tests/: conftest.py  test_atom.py  test_presto.py
tests/lsd/: conftest.py  test_lsd.py
tests/lsd/generate/: conftest.py  test_gym.py  test_transformers.py
tests/presto/: conftest.py  test_atom.py  test_presto.py
