[tool.poetry]
name = "presto-multiverse"
version = "0.1.2"
description = "Presto: Projected Embedding Similarty based on Topological Overlays"
authors = ["jeremy.wayland <jeremy.don.wayland@gmail.com>","corrina.coupette <coupette@mpi-inf.mpg.de>","Bastian Rieck <bastian@rieck.me>"]
readme = "README.md"
license = "BSD-3"
packages = [
    { include = "presto", from = "." },
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
scikit-learn = "^1.4.1.post1"
pytest = "^8.0.2"
gudhi = "^3.9.0"
tqdm = "^4.66.2"
networkx = "^3.2.1"
omegaconf = "^2.3.0"
wandb = "^0.16.4"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
