[project]
name = "presto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gudhi>=3.11.0",
    "networkx>=3.4.2",
    "numpy>=2.2.5",
    "omegaconf>=2.3.0",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "torch>=2.7.0",
    "torch-geometric>=2.6.1",
    "torch-vision>=0.1.6.dev0",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.7",
    "wandb>=0.19.10",
]

[dependency-groups]
dev = [
    "memory-profiler>=0.61.0",
    "pdoc>=15.0.3",
    "pillow>=11.2.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]
